other/rec-req/require-image-source/.kyverno-test/good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: test
      image: ghcr.io/kyverno/kyverno-annotations-example:latest
