other/rec-req/require-image-source/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: require-image-source
  resources:
  - name: goodpod01
    values:
      request.operation: UPDATE
  rules:
  - name: check-source
    values:
      imageData:
        annotations:
          org.opencontainers.image.source: https://github.com/kyverno/kyverno-examples
        labels:
          org.opencontainers.image.source: https://github.com/kyverno/kyverno-examples
